--- a/interpreter.cabal
+++ b/interpreter.cabal
@@ -26,6 +26,8 @@ executable interpreter
 
     -- Modules included in this executable, other than Main.
     -- other-modules:
+    other-modules:
+      Interpreter
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
