--- a/interpreter.cabal
+++ b/interpreter.cabal
@@ -27,12 +27,15 @@ executable interpreter
     -- Modules included in this executable, other than Main.
     -- other-modules:
     other-modules:
-      Interpreter
+      Lexer,
+      Parser,
+      Runtime
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:
         base ^>=4.16.4.0,
-        array ^>=0.5.4.0
+        array ^>=0.5.4.0,
+        containers
     hs-source-dirs:   app
     default-language: Haskell2010
