--- a/interpreter.cabal
+++ b/interpreter.cabal
@@ -27,6 +27,7 @@ executable interpreter
     -- Modules included in this executable, other than Main.
     -- other-modules:
     other-modules:
+      LangTypes,
       Lexer,
       Parser,
       Runtime
